add armors