@@ -1,20 +1,17 @@
 package com.daylight.civilization_fire.common.content.item.armor;
 
 import com.daylight.civilization_fire.client.model.armor.RookieHeadArmorModel;
+import com.daylight.civilization_fire.client.model.armor.WaxGourdArmorModel;
 import com.daylight.civilization_fire.common.CivilizationFire;
 import com.daylight.civilization_fire.common.content.item.material.VegetableMaterials;
-import com.daylight.civilization_fire.common.content.register.CivilizationFireEffect;
 import com.daylight.civilization_fire.common.content.register.CivilizationFireTab;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.model.HumanoidModel;
-import net.minecraft.client.model.Model;
-import net.minecraft.client.model.geom.EntityModelSet;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TextComponent;
-import net.minecraft.world.effect.MobEffectInstance;
-import net.minecraft.world.effect.MobEffects;
+import net.minecraft.util.Mth;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
@@ -22,8 +19,8 @@ import net.minecraft.world.item.ArmorItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.client.IItemRenderProperties;
-import net.minecraftforge.event.entity.living.LivingEvent;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
@@ -33,41 +30,34 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-
 @Mod.EventBusSubscriber
-public class RookieArmor extends ArmorItem{
-    public RookieArmor(EquipmentSlot slot) {
-        super(VegetableMaterials.LOW_VEGETABLE, slot, new Properties().tab(CivilizationFireTab.ADD_MODE_TAB));
-    }
-
-    //受伤事件处理
-    @SubscribeEvent
-    public static void onRookieArmorOnUpDate(LivingEvent.LivingUpdateEvent updateEvent) {
-        if(updateEvent.getEntityLiving().getItemBySlot(EquipmentSlot.HEAD).getItem() instanceof RookieArmor) {
-            updateEvent.getEntityLiving().addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING,80));
-            updateEvent.getEntityLiving().addEffect(new MobEffectInstance(CivilizationFireEffect.VEGETABLE_EFFECT.get(),80));
-        }
-    }
-
-    //受伤事件处理
-    @SubscribeEvent
-    public static void onRookieArmorOnHurt(LivingHurtEvent hurtEvent) {
-        if(hurtEvent.getEntityLiving().getItemBySlot(EquipmentSlot.HEAD).getItem() instanceof RookieArmor) {
-            if (hurtEvent.getSource().isFall()) {
-                hurtEvent.setCanceled(true);
-            }
-        }
+public class WaxGourdArmor extends ArmorItem {
+    public WaxGourdArmor(EquipmentSlot pSlot) {
+        super(VegetableMaterials.HIGH_VEGETABLE, pSlot, new Properties().tab(CivilizationFireTab.ADD_MODE_TAB));
     }
 
     @Override
     public void appendHoverText(ItemStack pStack, @Nullable Level pLevel, List<Component> pTooltipComponents, TooltipFlag pIsAdvanced) {
         super.appendHoverText(pStack, pLevel, pTooltipComponents, pIsAdvanced);
-        pTooltipComponents.add(new TextComponent(I18n.get("rookie_armor.hover_text")));
+        pTooltipComponents.add(new TextComponent(I18n.get("wax_gourd.hover_text")));
+    }
+
+    //受伤事件处理
+    @SubscribeEvent
+    public static void onWaxGourdArmorOnHurt(LivingHurtEvent hurtEvent) {
+        Entity entity = hurtEvent.getSource().getEntity();
+        if(entity != null){
+            hurtEvent.setAmount(hurtEvent.getAmount() * 0.5F);
+            entity.hasImpulse = true;
+            Vec3 vec3 = entity.getDeltaMovement();
+            Vec3 vec31 = (new Vec3(-Mth.sin(entity.getYRot() * ((float) Math.PI / 180F)), 0.0D, Mth.cos(entity.getYRot() * ((float) Math.PI / 180F)))).normalize().scale(0.8);
+            entity.setDeltaMovement(vec3.x / 2.0D - vec31.x,  vec3.y, vec3.z / 2.0D - vec31.z);
+        }
     }
 
     @Override
     public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String layer) {
-        return CivilizationFire.MODID + ":textures/armor/rookie_armor_hat.png";
+        return CivilizationFire.MODID + ":textures/armor/wax_gourd_armor_body.png";
     }
 
 
@@ -77,13 +67,13 @@ public class RookieArmor extends ArmorItem{
         consumer.accept(new IItemRenderProperties() {
             @Override
             public HumanoidModel<LivingEntity> getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                WaxGourdArmorModel<LivingEntity> waxGourdArmorModel = new WaxGourdArmorModel<>(Minecraft.getInstance().getEntityModels().bakeLayer(WaxGourdArmorModel.LAYER_LOCATION));
                 HumanoidModel<LivingEntity> armorModel = new HumanoidModel<>(new ModelPart(Collections.emptyList(),
-                        Map.of(
-                                "head", new RookieHeadArmorModel<>(Minecraft.getInstance().getEntityModels().bakeLayer(RookieHeadArmorModel.LAYER_LOCATION)).head,
+                        Map.of("head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
                                 "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                                "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                                "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-                                "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                "body", waxGourdArmorModel.body,
+                                "right_arm", waxGourdArmorModel.rightarm,
+                                "left_arm", waxGourdArmorModel.leftarm,
                                 "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
                                 "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
                 armorModel.crouching = living.isShiftKeyDown();
